implement serving home page with static files

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Lawrence Sarpong">
   <meta name="description" content="Search cryptocurrencies">
   <meta name="keywords" content="cryptocurrency crypto currency bitcoin ethereum litecoin blockchain search">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="public/css/style.css">
   <title>Crypto Search</title>
 </head>
 <body>
@@ -24,8 +24,8 @@
   <section class="container overview-container">
   </section>
   
-  <script src="./js/render.js"></script>
-  <script src="./js/request.js"></script>
-  <script src="./js/ui.js"></script>
+  <script src="public/js/render.js"></script>
+  <script src="public/js/request.js"></script>
+  <script src="public/js/ui.js"></script>
 </body>
 </html>
