plot forecast chart

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Search cryptocurrencies">
   <meta name="keywords" content="cryptocurrency crypto currency bitcoin ethereum litecoin blockchain search">
   <link rel="stylesheet" href="public/css/style.css">
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <title>Crypto Search</title>
 </head>
 <body>
@@ -22,6 +23,7 @@
   </section>
   
   <section class="container overview-container">
+    <div class="visualization"></div>
   </section>
   
   <script src="public/js/render.js"></script>
